src/Part_2/orange/application/network_security_group.tf
# Security group to allow inbound access on port 80 (http) and 22 (ssh)
resource "azurerm_network_security_group" "orange" {
  name                = "${var.resource_prefix}-sg-${var.variation}"
  location            = var.location
  resource_group_name = var.resource_group

  security_rule {
    name                       = "HTTP"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = var.source_network
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "SSH"
    priority                   = 101
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = var.source_network
    destination_address_prefix = "*"
  }
}
